--- a/vignettes/NMsim-speed.Rmd
+++ b/vignettes/NMsim-speed.Rmd
@@ -121,7 +121,7 @@ dose1 <- NMcreateDoses(TIME=c(0,24),AMT=c(300,150),
                        addl=list(ADDL=c(0,5),II=c(0,24)),CMT=1,col.id=NA,
                        as.fun="data.table")
 doses <- dose1[,.(ID=1:1000),by=dose1]
-dat.sim <- addEVID2(doses,TIME=0:(24*7),CMT=2)
+dat.sim <- NMaddSamples(doses,TIME=0:(24*7),CMT=2)
 
 
 ## say dt.sim is a large data set with 1000 subjects. We want 10 data
