--- a/vignettes/examples.Rmd
+++ b/vignettes/examples.Rmd
@@ -30,7 +30,7 @@ Authors: **Philip Delff**
 
 NMsim-known.Rmd  
 
-[**Data Set Creation with NMsim**](NMsim-DataCreate.Rmd)  
+[**Data Set Creation with NMsim**](NMsim-DataCreate.html)  
 Authors: **Philip Delff**  
 
 
