--- a/vignettes/NMsim-intro-noFolding.Rmd
+++ b/vignettes/NMsim-intro-noFolding.Rmd
@@ -322,7 +322,7 @@ simres.typ <- NMsim(file.mod=file.mod,data=data.sim,
 ```
 
 
-```{r,typsubj,include=FALSE}
+```{r,typsubj,include=FALSE,eval=FALSE}
 ### typical subject 
 simres.typ <- NMsim(
     file.mod=file.mod,
