--- a/vignettes/NMsim-TypSubj.Rmd
+++ b/vignettes/NMsim-TypSubj.Rmd
@@ -15,6 +15,8 @@ header-includes:
 ---
 
 ```{r,include = FALSE}
+library(knitr)
+
 ##knitr::opts_chunk$set(dev = "cairo_pdf")
 knitr::opts_chunk$set(
                       collapse = TRUE
@@ -22,6 +24,16 @@ knitr::opts_chunk$set(
                      ,fig.width=7
                      ,cache=FALSE
                   )
+
+
+knitr::opts_hooks$set(function(options) {
+  if (is.null(options$fig.alt) && !is.null(options$fig.cap)) {
+    options$fig.alt <- options$fig.cap
+  }
+  options
+})
+
+
 
 ## this changes data.table syntax. I think we can do without.
 ## knitr::opts_chunk$set(tidy.opts=list(width.cutoff=60), tidy=TRUE)
