--- a/vignettes/NMsim-intro.Rmd
+++ b/vignettes/NMsim-intro.Rmd
@@ -150,6 +150,14 @@ knitr::opts_chunk$set(echo = TRUE,
                       out.width = "100%"
                      ,fig.height=3.7
                       )
+
+knitr::opts_hooks$set(function(options) {
+  if (is.null(options$fig.alt) && !is.null(options$fig.cap)) {
+    options$fig.alt <- options$fig.cap
+  }
+  options
+})
+
 options(knitr.table.format = "html") 
 
 library(data.table)
