--- a/vignettes/examples.Rmd
+++ b/vignettes/examples.Rmd
@@ -15,6 +15,18 @@ header-includes:
 ---
 
 
+
+```{r,setup-hide,include=FALSE}
+library(knitr)
+knitr::opts_hooks$set(function(options) {
+  if (is.null(options$fig.alt) && !is.null(options$fig.cap)) {
+    options$fig.alt <- options$fig.cap
+  }
+  options
+})
+```
+
+
 <img src='../man/figures/NMsimlogo240.png' align="right" height="120" />
 
 
